Fixed CSS alignment on left side of input boxes

--- a/src/App.css
+++ b/src/App.css
@@ -64,4 +64,5 @@ html {
 .userInput {
   height: 2em;
   width: 25px;
+  margin-left: 5px;
 }
